--- a/Q11.ipynb
+++ b/Q11.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZouF7P8U1FDTAj1MP3kEs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sjhwang031/DLG6/blob/main/Q11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/2Beneficence2/DLG6/blob/main/Q11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,12 +36,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "9mLJcF-FlFjD"
+        "id": "9mLJcF-FlFjD",
+        "outputId": "eee20c60-9027-46b1-8bf4-ad904ab99dfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
+      "source": [
+        "my_list = [1, 2, 3, 4, 5]\n",
+        "len(my_list)"
+      ]
     }
   ]
 }
